[gd_scene load_steps=14 format=3 uid="uid://dnfxdwny35ci"]

[ext_resource type="Script" path="res://scripts/Main_menu.gd" id="1_ednag"]
[ext_resource type="Theme" uid="uid://d1y3okhiwxw6o" path="res://resources/main_theme.tres" id="1_lnwq1"]
[ext_resource type="FontFile" uid="uid://j26w3mseqct0" path="res://resources/Pixeboy-z8XGD.ttf" id="2_cuqan"]
[ext_resource type="Texture2D" uid="uid://m0gm3irberdr" path="res://resources/icons/settings-icon.svg" id="3_biitb"]
[ext_resource type="Texture2D" uid="uid://bcu0lde65d12p" path="res://resources/island_texture.tres" id="4_ufj13"]
[ext_resource type="Texture2D" uid="uid://c4qcsgov06kj1" path="res://resources/icons/next-button.svg" id="5_3ji2o"]
[ext_resource type="PackedScene" uid="uid://cc0pmxipl3eto" path="res://scenes/Background.tscn" id="5_fft66"]
[ext_resource type="Texture2D" uid="uid://bdfw5tfknoii5" path="res://resources/icons/play-icon.svg" id="5_jcg4x"]
[ext_resource type="Texture2D" uid="uid://dy4j3xugbw0xo" path="res://resources/icons/back-button.svg" id="5_ygaln"]
[ext_resource type="Texture2D" uid="uid://cmfcqw425cnct" path="res://resources/icons/play-pressed.svg" id="6_6pb3f"]
[ext_resource type="Texture2D" uid="uid://v6htvhif735d" path="res://resources/icons/info-icon.svg" id="6_c61ih"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kjwcv"]
size = Vector2(120, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7lkdh"]
size = Vector2(60, 60)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 725.0
offset_bottom = 1290.0
mouse_default_cursor_shape = 2
theme = ExtResource("1_lnwq1")
script = ExtResource("1_ednag")
metadata/_edit_vertical_guides_ = [360.0]
metadata/_edit_horizontal_guides_ = [758.0]

[node name="StartScreen" type="Control" parent="."]
anchors_preset = 0
offset_right = 722.0
offset_bottom = 1275.0

[node name="Title" type="RichTextLabel" parent="StartScreen"]
layout_mode = 0
offset_left = -13.0
offset_top = 69.0
offset_right = 739.0
offset_bottom = 221.0
bbcode_enabled = true
text = "[center] GeograPH  
 [i] Heograpinas [/i]"

[node name="Panel" type="Panel" parent="StartScreen"]
self_modulate = Color(1, 1, 1, 0.843137)
layout_mode = 0
offset_left = 51.0
offset_top = 921.0
offset_right = 691.0
offset_bottom = 1128.0

[node name="HBoxContainer" type="HBoxContainer" parent="StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = 266.5
offset_right = 322.0
offset_bottom = 516.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 200

[node name="Control2" type="Control" parent="StartScreen/HBoxContainer"]
layout_mode = 2

[node name="Settings" type="TouchScreenButton" parent="StartScreen/HBoxContainer/Control2"]
position = Vector2(-8, -23)
scale = Vector2(1.26538, 1.17708)
texture_normal = ExtResource("3_biitb")
shape = SubResource("RectangleShape2D_kjwcv")

[node name="Title" type="RichTextLabel" parent="StartScreen/HBoxContainer/Control2"]
layout_mode = 0
offset_left = 15.0
offset_top = 146.0
offset_right = 228.0
offset_bottom = 183.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_cuqan")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[center] Settings"

[node name="Control" type="Control" parent="StartScreen/HBoxContainer"]
layout_mode = 2

[node name="NewGame" type="TouchScreenButton" parent="StartScreen/HBoxContainer/Control"]
scale = Vector2(1.26538, 1.17708)
texture_normal = ExtResource("5_jcg4x")
texture_pressed = ExtResource("6_6pb3f")
shape = SubResource("RectangleShape2D_kjwcv")

[node name="Title" type="RichTextLabel" parent="StartScreen/HBoxContainer/Control"]
layout_mode = 0
offset_left = 17.0
offset_top = 144.0
offset_right = 230.0
offset_bottom = 181.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_cuqan")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[center] New Game "

[node name="Control3" type="Control" parent="StartScreen/HBoxContainer"]
layout_mode = 2

[node name="About" type="TouchScreenButton" parent="StartScreen/HBoxContainer/Control3"]
position = Vector2(19, 22)
scale = Vector2(1.26538, 1.17708)
texture_normal = ExtResource("6_c61ih")
shape = SubResource("RectangleShape2D_kjwcv")

[node name="Title" type="RichTextLabel" parent="StartScreen/HBoxContainer/Control3"]
layout_mode = 0
offset_left = 18.0
offset_top = 146.0
offset_right = 231.001
offset_bottom = 183.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_cuqan")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[center] About "

[node name="NewGameSection" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 725.0
offset_bottom = 1290.0

[node name="Title" type="RichTextLabel" parent="NewGameSection"]
layout_mode = 0
offset_left = -2.0
offset_top = 118.0
offset_right = 724.0
offset_bottom = 203.0
bbcode_enabled = true
text = "[center]Game Modes"

[node name="BackBtn" type="TouchScreenButton" parent="NewGameSection"]
position = Vector2(115, 132)
rotation = 3.13254
texture_normal = ExtResource("5_ygaln")
shape = SubResource("RectangleShape2D_7lkdh")

[node name="LevelSelection" type="TabContainer" parent="NewGameSection"]
layout_mode = 0
offset_left = 21.0
offset_top = 204.0
offset_right = 704.0
offset_bottom = 692.0
tab_alignment = 1
current_tab = 1
tab_focus_mode = 0

[node name="Locate" type="Control" parent="NewGameSection/LevelSelection"]
visible = false
layout_mode = 2

[node name="Locate" type="TouchScreenButton" parent="NewGameSection/LevelSelection/Locate"]
scale = Vector2(1.26538, 1.17708)
texture_normal = ExtResource("4_ufj13")
shape = SubResource("RectangleShape2D_kjwcv")

[node name="Title" type="RichTextLabel" parent="NewGameSection/LevelSelection/Locate/Locate"]
offset_left = 33.1916
offset_top = 48.4249
offset_right = 246.192
offset_bottom = 85.4249
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_cuqan")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[center] tap 2 Locate"

[node name="Flashcards" type="Control" parent="NewGameSection/LevelSelection"]
layout_mode = 2

[node name="Flashcards" type="TouchScreenButton" parent="NewGameSection/LevelSelection/Flashcards"]
position = Vector2(143, 271)
scale = Vector2(1.26538, 1.17708)
texture_normal = ExtResource("4_ufj13")
shape = SubResource("RectangleShape2D_kjwcv")

[node name="Title" type="RichTextLabel" parent="NewGameSection/LevelSelection/Flashcards/Flashcards"]
offset_left = 33.1916
offset_top = 48.4249
offset_right = 246.192
offset_bottom = 85.4249
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_cuqan")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[center] Flashcards"

[node name="Enumeration" type="Control" parent="NewGameSection/LevelSelection"]
visible = false
layout_mode = 2

[node name="Enumeration" type="TouchScreenButton" parent="NewGameSection/LevelSelection/Enumeration"]
scale = Vector2(1.26538, 1.17708)
texture_normal = ExtResource("4_ufj13")
shape = SubResource("RectangleShape2D_kjwcv")

[node name="Title" type="RichTextLabel" parent="NewGameSection/LevelSelection/Enumeration/Enumeration"]
offset_left = 33.1916
offset_top = 48.4249
offset_right = 246.192
offset_bottom = 85.4249
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_cuqan")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[center] Enumeration"

[node name="Prev" type="TouchScreenButton" parent="NewGameSection/LevelSelection"]
position = Vector2(104, 54)
rotation = 3.13748
texture_normal = ExtResource("5_3ji2o")

[node name="Next" type="TouchScreenButton" parent="NewGameSection/LevelSelection"]
position = Vector2(587, -24)
texture_normal = ExtResource("5_3ji2o")

[node name="DifficultySelection" type="TabContainer" parent="NewGameSection"]
layout_mode = 0
offset_left = 15.0
offset_top = 720.0
offset_right = 698.0
offset_bottom = 1208.0
tab_alignment = 1
current_tab = 1
tab_focus_mode = 0

[node name="Easy" type="Control" parent="NewGameSection/DifficultySelection"]
visible = false
layout_mode = 2

[node name="Medium" type="Control" parent="NewGameSection/DifficultySelection"]
layout_mode = 2

[node name="Hard" type="Control" parent="NewGameSection/DifficultySelection"]
visible = false
layout_mode = 2

[node name="Custom" type="Control" parent="NewGameSection/DifficultySelection"]
visible = false
layout_mode = 2

[node name="Prev2" type="TouchScreenButton" parent="NewGameSection/DifficultySelection"]
position = Vector2(103, 55)
rotation = 3.13748
texture_normal = ExtResource("5_3ji2o")

[node name="Next2" type="TouchScreenButton" parent="NewGameSection/DifficultySelection"]
position = Vector2(587, -24)
texture_normal = ExtResource("5_3ji2o")

[node name="SettingsSection" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 725.0
offset_bottom = 1290.0

[node name="BackBtn2" type="TouchScreenButton" parent="SettingsSection"]
position = Vector2(124, 122)
rotation = 3.1382
texture_normal = ExtResource("5_ygaln")
shape = SubResource("RectangleShape2D_7lkdh")

[node name="Title" type="RichTextLabel" parent="SettingsSection"]
layout_mode = 0
offset_left = 176.0
offset_top = 175.0
offset_right = 550.0
offset_bottom = 260.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_cuqan")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[center] [b] SETTINGS  [b]"

[node name="AboutSection" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 725.0
offset_bottom = 1290.0

[node name="BackBtn3" type="TouchScreenButton" parent="AboutSection"]
position = Vector2(131, 125)
rotation = -3.14083
texture_normal = ExtResource("5_ygaln")
shape = SubResource("RectangleShape2D_7lkdh")

[node name="Title" type="RichTextLabel" parent="AboutSection"]
layout_mode = 0
offset_left = 176.0
offset_top = 175.0
offset_right = 550.0
offset_bottom = 260.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_cuqan")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[center] [b] ABOUT  [b]"

[node name="Background" parent="." instance=ExtResource("5_fft66")]
layout_mode = 0
offset_right = 723.0
offset_bottom = 1283.0

[connection signal="pressed" from="StartScreen/HBoxContainer/Control2/Settings" to="." method="_on_settings_pressed"]
[connection signal="released" from="StartScreen/HBoxContainer/Control/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="StartScreen/HBoxContainer/Control3/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="NewGameSection/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="NewGameSection/LevelSelection/Locate/Locate" to="." method="_on_locate_pressed"]
[connection signal="pressed" from="NewGameSection/LevelSelection/Flashcards/Flashcards" to="." method="_on_flashcards_pressed"]
[connection signal="pressed" from="NewGameSection/LevelSelection/Enumeration/Enumeration" to="." method="_on_enumeration_pressed"]
[connection signal="pressed" from="NewGameSection/LevelSelection/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="NewGameSection/LevelSelection/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="NewGameSection/DifficultySelection/Prev2" to="." method="_on_prev_2_pressed"]
[connection signal="pressed" from="NewGameSection/DifficultySelection/Next2" to="." method="_on_next_2_pressed"]
[connection signal="pressed" from="SettingsSection/BackBtn2" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="AboutSection/BackBtn3" to="." method="_on_back_btn_pressed"]
